# rust-for-backend-development

./: .gitignore  LICENSE  README.md
lesson_2/: Cargo.toml  README.md
lesson_2/data/: movies.json
lesson_2/src/model/: mod.rs
lesson_3/: Dockerfile.localdevelopment  Dockerfile.production  Dockerfile.raw  Makefile  README.md  cut_build_push_image.sh
lesson_3/data/: movies.json
lesson_3/src/: lib.rs
lesson_3/src/db/: mod.rs
lesson_4/: Cargo.toml  Dockerfile.localdevelopment  Makefile  README.md  create_db.sh  docker-compose.yaml
lesson_4/db/migrations/: 20200915054053_create_books_table.sql  20200915054054_add_sample_books.sql
lesson_4/src/: bin.rs
lesson_4/src/db/: mod.rs
lesson_4/src/model/: mod.rs
lesson_5/: Cargo.toml  Dockerfile.dbmate  Dockerfile.localdevelopment  README.md  Rocket.toml  docker-compose.yaml
lesson_5/src/: bin.rs  lib.rs
lesson_5/src/model/: mod.rs
lesson_5/src/redis_utils/: mod.rs
src/: bin.rs
